--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     compile group: 'io.improbable', name: 'keanu', version: '0.0.18'
+    implementation "de.codecentric.centerdevice:javafxsvg:1.3.0"
 
     //testing
     testCompile 'junit:junit:4.12'
